# supercharger-tracker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TECHNICAL.md  api-plan.md  db-plan.md  tesla-supercharger-api.md
docs/: API.md  akamai-bypass.md
docs/plans/: country-filter.md  disappeared-charger-open-check.md  integration-tests.md  layered-architecture-refactor.md  scrape-export-import.md  upload-local-scrapes.md
migrations/: 20260327000000_init.sql  20260327000001_api_indexes.sql  20260328000000_add_scrape_run_details_failures.sql  20260331000000_slug_pk.sql  20260401000000_location_columns.sql  20260403000000_add_charger_category.sql  20260403000001_add_removed_status.sql  20260403000002_drop_is_active.sql  20260403000003_status_changes_drop_fk.sql  20260403000004_create_opened_superchargers.sql  20260403000005_add_open_status_check_failed.sql  20260405000000_export_pipeline.sql  20260405000001_add_opened_status.sql
src/: coming_soon.rs  db.rs  display.rs  export.rs  loaders.rs  main.rs  raw.rs  regions.rs  supercharger.rs  sync.rs
src/api/: import.rs  mod.rs  scrape_runs.rs  superchargers.rs
src/application/: export_diff.rs  export_snapshot.rs  import.rs  mod.rs  retry.rs  scrape.rs  status.rs
src/domain/: coming_soon.rs  mod.rs  supercharger.rs  sync.rs
src/repository/: connection.rs  mod.rs  models.rs  scrape_run.rs  supercharger.rs
src/scraper/: loaders.rs  mod.rs  raw.rs
src/util/: config.rs  display.rs
